--- a/disaster-recovery/Dockerfile.apache-rds
+++ b/disaster-recovery/Dockerfile.apache-rds
@@ -21,6 +21,6 @@ RUN a2enmod rewrite headers
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost/health.php || exit 1
+    CMD curl -f http://localhost/health-simple.php || exit 1
 
 EXPOSE 80
