Fix Apache configuration - enable required modules

--- a/disaster-recovery/Dockerfile.apache-rds
+++ b/disaster-recovery/Dockerfile.apache-rds
@@ -17,7 +17,7 @@ RUN chown -R www-data:www-data /var/www/html \
     && chmod -R 755 /var/www/html
 
 # Enable Apache modules
-RUN a2enmod rewrite headers
+RUN a2enmod rewrite headers deflate remoteip
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
