--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -225,17 +225,64 @@ jobs:
           cd $TF_ROOT
           terraform init
           
+      - name: Import existing resources
+        run: |
+          cd $TF_ROOT
+          echo "🔍 Checking for existing resources to import..."
+          
+          # Import existing VPC if it exists
+          VPC_ID=$(aws ec2 describe-vpcs --filters "Name=tag:Name,Values=lamp-visitor-analytics-vpc" --query 'Vpcs[0].VpcId' --output text 2>/dev/null || echo "None")
+          if [ "$VPC_ID" != "None" ] && [ -n "$VPC_ID" ]; then
+            echo "📥 Importing existing VPC: $VPC_ID"
+            terraform import module.primary_networking.aws_vpc.main $VPC_ID 2>/dev/null || true
+          fi
+          
+          # Import existing ECS cluster if it exists
+          if aws ecs describe-clusters --clusters lamp-visitor-analytics 2>/dev/null | grep -q "clusterName"; then
+            echo "📥 Importing existing ECS cluster"
+            terraform import module.primary_ecs.aws_ecs_cluster.main lamp-visitor-analytics 2>/dev/null || true
+          fi
+          
+          # Import existing ALB if it exists
+          ALB_ARN=$(aws elbv2 describe-load-balancers --query 'LoadBalancers[?contains(LoadBalancerName, `alb-`)].LoadBalancerArn | [0]' --output text 2>/dev/null || echo "None")
+          if [ "$ALB_ARN" != "None" ] && [ -n "$ALB_ARN" ]; then
+            echo "📥 Importing existing ALB: $ALB_ARN"
+            terraform import module.primary_ecs.aws_lb.main $ALB_ARN 2>/dev/null || true
+          fi
+          
+          # Import existing RDS instance if it exists
+          RDS_ID=$(aws rds describe-db-instances --query 'DBInstances[?contains(DBInstanceIdentifier, `lamp-visitor-analytics-db`)].DBInstanceIdentifier | [0]' --output text 2>/dev/null || echo "None")
+          if [ "$RDS_ID" != "None" ] && [ -n "$RDS_ID" ]; then
+            echo "📥 Importing existing RDS instance: $RDS_ID"
+            terraform import module.primary_rds.aws_db_instance.main $RDS_ID 2>/dev/null || true
+          fi
+          
       - name: Terraform Plan
         run: |
           cd $TF_ROOT
           terraform refresh -auto-approve || true
-          terraform plan -out=tfplan
+          terraform plan -out=tfplan -detailed-exitcode || {
+            EXIT_CODE=$?
+            if [ $EXIT_CODE -eq 2 ]; then
+              echo "✅ Changes detected, will apply"
+            elif [ $EXIT_CODE -eq 1 ]; then
+              echo "❌ Plan failed"
+              exit 1
+            else
+              echo "✅ No changes needed"
+              touch no-changes
+            fi
+          }
           
       - name: Terraform Apply
         run: |
           cd $TF_ROOT
-          # Apply everything except ECS service first
-          terraform apply -auto-approve tfplan
+          if [ ! -f no-changes ]; then
+            echo "🚀 Applying Terraform changes..."
+            terraform apply -auto-approve tfplan
+          else
+            echo "✅ No changes to apply - infrastructure is up to date"
+          fi
           
       - name: Verify Deployment
         run: |
